카카오 주소검색 API 기능 구현
- 카카오 주소검색 API에 쿼리와 함께 요청하고, 응답까지 받아오는 기능을 구현했다.

- API 응답값을 담을 DTO 클래스 구현
- 쿼리문을 API 요청 URI로 변환하는 기능 구현 (`KakaoUriBuilderService`)
- RestTemplate을 사용해 생성된 URI로 API 요청하는 기능 구현
- 카카오 REST API KEY를 관리하기 위해 application.yml에 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,17 +2,24 @@ spring:
   profiles:
     active: local   # default
     group:
-      # ?? ??? profile ??
+      # 함께 사용될 profile
       local:
-        - common  # local profile? ???? common profile? ?? import
+        - common  # local profile을 사용하면 common profile도 함께 import
       prod:
-        - common  # prod profile? ???? common profile? ?? import
+        - common  # prod profile을 사용하면 common profile도 함께 import
 
 ---
 spring:
   config:
     activate:
       on-profile: common
+
+# 실무에서는 외부 API key를 common에 두지 않고, 로컬과 배포 환경에 별도로 발급받는다.
+# 사용량 제한에 걸리지 않기 위함이다.
+kakao:
+  rest:
+    api:
+      key: ${KAKAO_REST_API_KEY}
 
 ---
 spring:
