--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'groovy'
     id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
@@ -30,8 +31,17 @@ dependencies {
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    testImplementation('org.spockframework:spock-core:2.3-groovy-3.0')
+    testImplementation('org.spockframework:spock-spring:2.3-groovy-3.0')
+
+    // 런타임에 클래스 기반 mock을 만들기 위해서 필요
+    testImplementation 'net.bytebuddy:byte-buddy:1.9.3'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.spockframework:spock-spring:2.3-groovy-4.0'
 }
 
 tasks.named('test') {
