--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,22 @@
 plugins {
+    id 'org.springframework.boot' version '2.6.7'
+    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
     id 'java'
     id 'groovy'
-    id 'org.springframework.boot' version '3.4.0'
-    id 'io.spring.dependency-management' version '1.1.6'
 }
 
-group = 'com.ncookie'
+group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-    }
-}
+sourceCompatibility = '11'
 
 configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+bootJar {
+    archiveFileName = 'app.jar'
 }
 
 repositories {
@@ -31,23 +30,32 @@ dependencies {
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
-
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    testImplementation('org.spockframework:spock-core:2.3-groovy-3.0')
-    testImplementation('org.spockframework:spock-spring:2.3-groovy-3.0')
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-    // 런타임에 클래스 기반 mock을 만들기 위해서 필요
-    testImplementation 'net.bytebuddy:byte-buddy:1.9.3'
+    // spock
+    testImplementation('org.spockframework:spock-core:2.1-groovy-3.0')
+    testImplementation('org.spockframework:spock-spring:2.1-groovy-3.0')
 
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    implementation 'org.spockframework:spock-spring:2.3-groovy-4.0'
+    // 런타임에 클래스 기반 spock mock을 만들기 위해서 필요
+    testImplementation('net.bytebuddy:byte-buddy:1.12.10')
+
+    // testcontainers
+    testImplementation 'org.testcontainers:spock:1.17.1'
+    testImplementation 'org.testcontainers:mariadb:1.17.1'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
 
-bootJar {
-    archiveFileName = 'app.jar'
+// $ ./gradlew clean build -PKAKAO_REST_API_KEY={api key 값} 명령어로 전체 테스트 및 빌드하여 jar 파일 생성
+processTestResources {
+    boolean hasProperty = project.hasProperty("KAKAO_REST_API_KEY")
+    System.out.println("Set kakao rest api key: $hasProperty")
+    filesMatching('**/application.yml') {
+        expand(project.properties)
+    }
 }
