--- a/build.gradle
+++ b/build.gradle
@@ -35,18 +35,11 @@ dependencies {
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-    // Spring Retry
-    implementation 'org.springframework.retry:spring-retry'
-
-    // handlebars
-    implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.4'
-
     // https://github.com/seruco/base62
     implementation 'io.seruco.encoding:base62:0.1.3'
 
-    // mockWebServer
-    testImplementation 'com.squareup.okhttp3:okhttp:4.10.0'
-    testImplementation 'com.squareup.okhttp3:mockwebserver:4.10.0'
+    // handlebars
+    implementation 'pl.allegro.tech.boot:handlebars-spring-boot-starter:0.3.4'
 
     // spock
     testImplementation('org.spockframework:spock-core:2.1-groovy-3.0')
@@ -58,6 +51,13 @@ dependencies {
     // testcontainers
     testImplementation 'org.testcontainers:spock:1.17.1'
     testImplementation 'org.testcontainers:mariadb:1.17.1'
+
+    // spring retry
+    implementation 'org.springframework.retry:spring-retry'
+
+    // mockWebServer
+    testImplementation('com.squareup.okhttp3:okhttp:4.10.0')
+    testImplementation('com.squareup.okhttp3:mockwebserver:4.10.0')
 }
 
 tasks.named('test') {
