--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,4 +1,3 @@
-# Testcontainers 에서 사용할 설정값
 spring:
   datasource:
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
@@ -12,3 +11,8 @@ kakao:
   rest:
     api:
       key: ${KAKAO_REST_API_KEY}
+
+pharmacy:
+  recommendation:
+    base:
+      url: http://localhost:8080/dir/
